# triton-serving-example

./: pyproject.toml
model_repository/: config.pbtxt
model_repository/1/: model.py
