[tool.poetry]
name = "triton-serving"
version = "0.1.0"
description = ""
authors = ["alexeymametyev <mametevalex@gmail.com>"]
readme = "README.md"
packages = [{include = "triton_serving"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

